tests/snapshots/compile_file__nums.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/nums.hvm
---
@main = b
  & $(a b) ~ [+16777215]
  & $(1000 a) ~ [+5]
