tests/snapshots/compile_file__redex_order.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/redex_order.hvm
---
@a = (a a)
@b = (a a)
@c = (a a)
@foo = (a b)
& @a ~ (c b)
& @b ~ (d c)
& @c ~ (a d)
@foo2 = a
& @a ~ (b a)
& @b ~ (c b)
& @c ~ (#0 c)
@main = a
& @foo ~ (@foo2 a)

