tests/snapshots/compile_file__ref_to_main.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/ref_to_main.bend
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mFoo[0m[1m':[0m
  Main definition can't be referenced inside the program.
