tests/snapshots/compile_file__ref_to_main.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/ref_to_main.hvm
---
Main definition can't be referenced inside the program
