tests/snapshots/compile_file__repeated_bind_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/repeated_bind_match.hvm
---
Warnings:
In definition 'main':
  Repeated bind inside match arm: 'x'.

@List.cons = (a (b {2 {2 a {2 b c}} {2 * c}}))
@List.nil = {2 * {2 a a}}
@main = ({2 {2 * {2 a a}} {2 * b}} b)
